# unsupervised-deep-learning-bachelor-thesis

./: .gitignore  AE adjustable backup.ipynb  AE adjustable on (augmented) brains.ipynb  AE adjustable test public.ipynb  AE adjustable test public2.ipynb  AE adjustable test1.ipynb  AE adjustable test2.ipynb  AE adjustable test4.ipynb  AE adjustable test5.ipynb  AE adjustable test5_.ipynb  AE adjustable updating.ipynb  README.md  ae_adj_comparisons.ipynb  ae_adj_training.ipynb  ae_adj_training_pc1.ipynb  ae_adj_training_pc2.ipynb  ae_adjustable.ipynb  atrophy.ipynb  clean_code_example.ipynb  clustering.ipynb  compare_models.ipynb  create_front_page.ipynb  dataset description.ipynb  fixing_ae_adj3.ipynb  hierarchical_clustering.ipynb  importance_of_frequencies.ipynb  model_results.feather  model_results_3d_07_05_2025.feather  model_results_3d_07_05_2025_jon.feather  model_results_3d_08_05_2025_all.feather  model_results_std.feather  model_results_std2.feather  model_results_std3_jon.feather  private_.ipynb  scrape_github_AE_repos.ipynb  summarizing individual data.ipynb  test_ae.ipynb  test_ae_sharp.ipynb  test_gan.ipynb  test_optimal_depths.ipynb  (+3 more)
Architectures/: AE.py  AE_ADJ.py  AE_ADJ_v2.py  About.md  GAN.py  PCA.py  VAE.py
Cache/: loss_per_latent_dim.json  test_optimal_depths.json
Data/: load.py
Filters/: filters.py
Metrics/: metrics.py  metrics_tf.py
Notes/: About.md  kiran_scitzno_article_notes.txt
Tests/: information.py
imago/: pyproject.toml  setup.py
imago/imago/: init.py  io.py
imago/imago.egg-info/: PKG-INFO  SOURCES.txt
(+503 files in other folders)
