[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imago"
version = "0.1.0"
description = "A Python module for reading and operating on MRI scans"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["MRI", "medical imaging", "analysis", "image processing"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[dependencies]
numpy = ">=1.21.0"
matplotlib = ">=3.4.0"
nibabel = ">=5.1.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
